--- a/index.html
+++ b/index.html
@@ -14,4 +14,8 @@ put your webpage’s content here
   <!-- You should go to Dave Raggett's page for help starting your webpage!!!-->
   <!-- http://www.w3.org/MarkUp/Guide/ -->
 </body>
+  <h1> Good Morning</h1>
+  <h2> Today is October 2, 2017</h2>
+  
+  
 </html>
