--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 </head>
 <body bgcolor=#FF00FF>
+  
 put your webpage’s content here
   
   <p>
@@ -15,7 +16,10 @@ put your webpage’s content here
   <!-- http://www.w3.org/MarkUp/Guide/ -->
 </body>
   <h1> Good Morning</h1>
-  <h2> Today is October 2, 2017</h2>
+  <h2> Today is October 4, 2017</h2>
   
+  <img src="https://www.google.com/search?q=pumpkin&tbm=isch&source=iu&pf=m&ictx=1&fir=LU-JyVYOoFJT2M%253A%252C5yNVReHXBwJVsM%252C_&usg=__GYMq-wfNfP0lYB8klN0DwOUVga8%3D&sa=X&ved=0ahUKEwjjrOefqtfWAhUY3YMKHU3BBOoQ_h0IxwEwGg#imgrc=LU-JyVYOoFJT2M:" height=100 alt="pumpkin>
+  
+
   
 </html>
