--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ put your webpage’s content here
   <h1> Good Morning</h1>
   <h2> Today is October 4, 2017</h2>
   
-  <img src="https://www.google.com/search?q=pumpkin&tbm=isch&source=iu&pf=m&ictx=1&fir=LU-JyVYOoFJT2M%253A%252C5yNVReHXBwJVsM%252C_&usg=__GYMq-wfNfP0lYB8klN0DwOUVga8%3D&sa=X&ved=0ahUKEwjjrOefqtfWAhUY3YMKHU3BBOoQ_h0IxwEwGg#imgrc=LU-JyVYOoFJT2M:" height=100 alt="pumpkin>
+  <img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin>
   
 
   
