--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ put your webpage’s content here
   <h1> Good Morning</h1>
   <h2> Today is October 4, 2017</h2>
   
-  <img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin>
+  <img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin">
   
 
   
