--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html><head>
-<title> put your webpage title here </title>
+<title> My Website </title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 </head>
 <body bgcolor=#FF00FF>
@@ -17,6 +17,7 @@ put your webpage’s content here
 </body>
   <h1> Good Morning</h1>
   <h2> Today is October 4, 2017</h2>
+  <i> It is a Wednesday</i>
   
   <img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin">
   
