--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ put your webpage’s content here
   <h2> Today is October 4, 2017</h2>
   <p><i> It is a Wednesday</i></p>
   
-  <a href="<img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin">
+ <img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin">
   
 
   
