--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@ put your webpage’s content here
   
  <img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin">
   
-
+<table border="1" style="text-align:center;">
+  <tr>
+    <td>Hello World</td>
+    <td style="color:green;">What's up?</td>
+  </tr>
+  <tr>
+    <td>Do you know the way to San Jose?</td>
+  </tr>
+  </table>
   
 </html>
