--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 </head>
 <body bgcolor=#FF00FF>
-  
-put your webpage’s content here
-  
+   
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fab1322a.github.io%2Fwebsite%2F"><img
       src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a>
@@ -28,6 +26,7 @@ put your webpage’s content here
   </tr>
   <tr>
     <td>Do you know the way to San Jose?</td>
+    <td>Maybe I do. Maybe I don't</td>
   </tr>
   </table>
   
