--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <title> My Website </title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 </head>
-<body bgcolor=#FF00FF>
+<body bgcolor=#00FF00>
    
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fab1322a.github.io%2Fwebsite%2F"><img
       src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a>
-  </p>
+  </p color: white>
   <!-- THIS IS AN HTML COMMENT!!! -->
   <!-- You should go to Dave Raggett's page for help starting your webpage!!!-->
   <!-- http://www.w3.org/MarkUp/Guide/ -->
-</body>
-  <h1> Good Morning</h1>
+ <h1> Good Morning</h1>
   <h2> Today is October 4, 2017</h2>
   <p><i> It is a Wednesday</i></p>
   
@@ -29,5 +28,8 @@
     <td>Maybe I do. Maybe I don't</td>
   </tr>
   </table>
+   
+   </body>
+ 
   
 </html>
