--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <p><i> It is a Wednesday</i></p>
   
  <img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin">
+ <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwi0-9TKstfWAhXqqFQKHf9xBtEQjRwIBw&url=http%3A%2F%2Fwww.johnnyseeds.com%2Fvegetables%2Fpumpkins%2Fjack-o-lanterns%2Fcargo-pmr-f1-pumpkin-seed-3978.html&psig=AOvVaw0yfpg48wc8svhBxzrX1fly&ust=1507221180563068" alt="pumpkin" />
   <br>
 <table border="1" style="text-align:center;">
   <tr>
