--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <h2> Today is October 4, 2017</h2>
   <p><i> It is a Wednesday</i></p>
   
- <img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin">
- <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwi0-9TKstfWAhXqqFQKHf9xBtEQjRwIBw&url=http%3A%2F%2Fwww.johnnyseeds.com%2Fvegetables%2Fpumpkins%2Fjack-o-lanterns%2Fcargo-pmr-f1-pumpkin-seed-3978.html&psig=AOvVaw0yfpg48wc8svhBxzrX1fly&ust=1507221180563068" alt="pumpkin" />
+ <a href="https://www.google.com/search?q=pumpkin&rlz=1C1CHBF_enUS744US744&oq=pumpkin&aqs=chrome..69i57j69i60j0l4.2161j0j4&sourceid=chrome&ie=UTF-8"><img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin" /></a>
+  <img src="https://cdn.pixabay.com/photo/2014/09/23/14/11/pumpkins-457716__340.jpg" height=100 alt="pumpkin" />
+ <img src="
   <br>
 <table border="1" style="text-align:center;">
   <tr>
