--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   <!-- http://www.w3.org/MarkUp/Guide/ -->
  <h1> Good Morning</h1>
   <h2> Today is October 4, 2017</h2>
+   <h3><b> Only 27 days until Halloween</b></h3>
   <p><i> It is a Wednesday</i></p>
   
  <a href="https://www.google.com/search?q=pumpkin&rlz=1C1CHBF_enUS744US744&oq=pumpkin&aqs=chrome..69i57j69i60j0l4.2161j0j4&sourceid=chrome&ie=UTF-8"><img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin" /></a>
-  <img src="https://cdn.pixabay.com/photo/2014/09/23/14/11/pumpkins-457716__340.jpg" height=100 alt="pumpkin" />
- <img src="
-  <br>
+ <img src="https://cdn.pixabay.com/photo/2014/09/23/14/11/pumpkins-457716__340.jpg" height=100 alt="pumpkin" />
+ 
+   <br>
 <table border="1" style="text-align:center;">
   <tr>
     <td>Hello World</td>
@@ -30,6 +31,13 @@
     <td>Maybe I do. Maybe I don't</td>
   </tr>
   </table>
+   <table>
+      <tr>
+         <td><a href="http://www.pumpkin-patch.com/facts.html">Learn More About Pumpkins</a></td>
+         <td><a href="http://www.history.com/topics/halloween/history-of-halloween>Learn more about Halloween</a></td>
+      </tr>
+      <table>
+            
    
    </body>
  
