--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </tr>
    <tr>
          <td><a href="http://www.pumpkin-patch.com/facts.html">Learn More About Pumpkins</a></td>
-         <td><a href="http://www.history.com/topics/halloween/history-of-halloween>Learn more about Halloween</a></td>
+         <td><a href="http://www.history.com/topics/halloween/history-of-halloween">Learn more about Halloween</a></td>
       </tr>
   </table>
  
