--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> My Website </title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 </head>
-<body bgcolor=#FFA500; text-color:white>
+<body bgcolor=#FFA500; style="color: white">
    
   <p>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fab1322a.github.io%2Fwebsite%2F"><img
