--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <!-- http://www.w3.org/MarkUp/Guide/ -->
  <h1> Good Morning</h1>
   <h2> Today is October 4, 2017</h2>
-   <h3 style="color:orange"><b> Only 27 days until Halloween</b></h3>
+   <h3 style="color:green"><b> Only 27 days until Halloween</b></h3>
   <p><i> It is a Wednesday</i></p>
+   <p style="font-size:9"> Tomorrow is Thursday</p>
   
  <a href="https://www.google.com/search?q=pumpkin&rlz=1C1CHBF_enUS744US744&oq=pumpkin&aqs=chrome..69i57j69i60j0l4.2161j0j4&sourceid=chrome&ie=UTF-8"><img src="https://cdn.pixabay.com/photo/2015/05/27/13/04/pumpkin-786668_960_720.jpg" height=100 alt="pumpkin" /></a>
  <img src="https://cdn.pixabay.com/photo/2014/09/23/14/11/pumpkins-457716__340.jpg" height=100 alt="pumpkin" />
+ <img src="https://cdn.pixabay.com/photo/2015/10/20/06/38/halloween-997307__340.jpg" height=100 alt="halloweenPumpkin"/>
  
    <br>
 <table border="1" style="text-align:center;">
