--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
    <br>
 <table border="1" style="text-align:center;">
   <tr>
-    <td>Hello World</td>
-    <td style="color:green;">What's up?</td>
+    <td>Pumpkins!</td>
+    <td style="color:green;">Halloween</td>
   </tr>
   <tr>
-    <td>Do you know the way to San Jose?</td>
-    <td>Maybe I do. Maybe I don't</td>
+    <td>Pumpkins are an orange fruit thing</td>
+    <td>Halloween is a holiday on October 31</td>
   </tr>
    <tr>
          <td><a href="http://www.pumpkin-patch.com/facts.html">Learn More About Pumpkins</a></td>
          <td><a href="http://www.history.com/topics/halloween/history-of-halloween">Learn more about Halloween</a></td>
       </tr>
   </table>
- 
+   <a href="C:\AU_School Things\CSC280">Learn about the pumpkins and halloween in this document</a> 
             
    
    </body>
