--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <title> My Website </title>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 </head>
-<body bgcolor=#FFA500; style="color: white">
+<body bgcolor=FFA500; style="color: white">
    
-  <p>
+  <p color: white>
     <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fab1322a.github.io%2Fwebsite%2F"><img
       src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.0 Transitional" height="31" width="88"></a>
-  </p color: white>
+  </p>
   <!-- THIS IS AN HTML COMMENT!!! -->
   <!-- You should go to Dave Raggett's page for help starting your webpage!!!-->
   <!-- http://www.w3.org/MarkUp/Guide/ -->
  <h1 style="text-align:center> Good Morning</h1>
   <h2> Today is October 4, 2017</h2>
-   <h3 style="color:green"><b> Only 27 days until Halloween</b></h3>
+   <h3 style="color:green;"><b> Only 27 days until Halloween</b></h3>
   <p><i> It is a Wednesday</i></p>
    <p style="font-size:9"> Tomorrow is Thursday</p>
   
