--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- THIS IS AN HTML COMMENT!!! -->
   <!-- You should go to Dave Raggett's page for help starting your webpage!!!-->
   <!-- http://www.w3.org/MarkUp/Guide/ -->
- <h1 style="text-align:center> Good Morning</h1>
+ <h1 style="text-align:center;> Good Morning</h1>
   <h2> Today is October 4, 2017</h2>
    <h3 style="color:green;"><b> Only 27 days until Halloween</b></h3>
   <p><i> It is a Wednesday</i></p>
